--- a/Documents/suunnitteludokumentti/versio.tex
+++ b/Documents/suunnitteludokumentti/versio.tex
@@ -1,3 +1,4 @@
 1.0 & 12.10.2006 & Ensimm‰inen versio \\
 1.1 & 19.10.2006 & Pikkuvirheit‰ ja sanamuotoja korjattu\\
 2.0 & 15.11.2006 & Toisen iteraation dokumentti FTR:‰‰ varten\\
+2.1 & 20.11.2006 & Lopullinen dokumentti\\
