*** empty log message ***

--- a/Documents/yhteenvetodokumentti/sisalto.tex
+++ b/Documents/yhteenvetodokumentti/sisalto.tex
@@ -143,16 +143,15 @@ Aluksi näyttikin tältä, ja luulimme että EAssari mahdollistaa nämä kuvatut toimi
 käsitys valmiista kehyksestä kuitenkin poikkeaa huomattavasti tästä. Koska projektin tavoitteena oli
 luoda järjestelmä, joka voitaisiin ottaa käyttöön nopeasti projektin päättymisen jälkeen, niin 
 totesimme parhaaksi ratkaisuksi jättää kehys täysin projektin ulkopuolelle. Käytimme kuitenkin
-EAssarin tietokantaa sellaisenaan, jotta Titotrainer olisi tulevaisuudessa helposti siirrettävissä
+EAssarin tietokantaa sellaisenaan, jotta Titotrainer olisi tulevaisuudessa mahdollista siirtää
 jatkokehitettyyn EAssari-kehykseen. 
 
 EAssarista puuttuu mm. käyttäjän rekisteröityminen, käyttäjän tietojen muokkaaminen, käyttäjän 
 kirjautuminen, kurssien ja moduulien hallinnointi, tehtävien selaaminen, suoritustilastojen 
 katsominen ja monikielisyyden hallinta. Kaikki listassa mainitut toiminnot kuuluvat mielestämme 
-jokaiseen tämän tyyppiseen
-valmiiksi kuvattuun kehykseen. Koska toimintoja ei ollut, jouduimme toteuttamaan ne itse. 
-Toteutuksessa ei kuitenkaan otettu huomioon EAssarin teoriassa mahdollistamaa geneerisyyttä, vaan
-toteutetut ominaisuudet ovat titotrainerkohtaisia.
+jokaiseen tämän tyyppiseen valmiiksi kuvattuun kehykseen. Koska toimintoja ei ollut, jouduimme
+toteuttamaan ne itse. Toteutuksessa ei kuitenkaan otettu huomioon EAssarin teoriassa mahdollistamaa
+geneerisyyttä, vaan toteutetut ominaisuudet ovat TitoTrainer-kohtaisia.
 
 \section{Projektityöskentely}
 
@@ -210,7 +209,7 @@ käyttöön.
 Projektista opittiin melko paljon. Tutuiksi tulivat CVS niille joille se ei jo ennestään ollut tuttu, ja
 opittiin myös tuntemaan JSP, JSTL, Eclipse, Tomcat-palvelinympäristö.
 
-Ensiarvoisen tärkeää oli että projektissa oli mukana henkilö (Taro "Ass" Morimoto), joka tunsi hyvin Tomcat-ympäristön, 
+Ensiarvoisen tärkeää oli että projektissa oli mukana henkilö (Taro), joka tunsi hyvin Tomcat-ympäristön, 
 Eclipsen ja JSP:n. Näin muut ryhmäläiset saivat tehokkaan pikaperehdytyksen ennestään tuntemattomiin tekniikoihin.
 
 Projektiryhmämme oli ilmeisesti koottu sillä perusteella, että kaikki olivat suorittaneet Käyttöliittymät-kurssin.
@@ -224,7 +223,7 @@ ollut ratkaisevaa merkitystä projektin onnistumiselle, vaikkakin sen suorittamis
 Mikko joi monta batteryä 
 
 
-Taro kertoi naisseikkailuistaan
+Taro "Ass" Morimoto kertoi naisseikkailuistaan
 
 
 Jari antoi selonteon Ninjan uusimmista käänteistä
