*** empty log message ***

--- a/Documents/yhteenvetodokumentti/sisalto.tex
+++ b/Documents/yhteenvetodokumentti/sisalto.tex
@@ -158,7 +158,7 @@ geneerisyyttä, vaan toteutetut ominaisuudet ovat TitoTrainer-kohtaisia.
 
 \subsection{Ryhmän henki}
 Ryhmän henki ja ilmapiiri oli erinomainen. Ryhmäläiset tukivat toisiaan, ja apua sai aina kun sitä
-tarvitsi. 
+tarvitsi. Kemia ryhmän jäsenten välillä toimi moitteettomasti - kaikki tuli toimeen kaikkien kanssa.
 
 \subsection{Käytetyt työkalut}
 
