*** empty log message ***

--- a/Documents/yhteenvetodokumentti/sisalto.tex
+++ b/Documents/yhteenvetodokumentti/sisalto.tex
@@ -163,6 +163,7 @@ tarvitsi. Kemia ryhmän jäsenten välillä toimi moitteettomasti - kaikki tuli toim
 \subsection{Käytetyt työkalut}
 
 Projektin alussa käytettiin ryhmälle pystytettyä Wikiä, jonka käytöstä kuitenkin luovuttiin aika pian.
+Wikiä ei tarvittu, koska ryhmä tosiaan teki lähes 90% tuotoksesta yhdessä laitoksen luokissa.
 
 Ohjelmointiympäristönä käytettiin Eclipseä ja sen kautta käytettiin CVS-versionhallintaa. Eclipsen käyttö sujui kohtuullisen
 hyvin ryhmäläisiltä pienen totuttelun jälkeen.
@@ -197,7 +198,7 @@ ja kasvatetty yhtä kenttää). Titotrainer
 ei kuitenkaan käytä tietokantaa sen mahdollistamassa laajuudessa ja muutamia sen mahdollistamia
 ominaisuuksia on yksinkertaistettu.
 
-Tulevaisuudessa järjestelmään voisi liittää dynaamisen tehtävätyypin. Dynaaminen tehtävä on sellainen
+Tulevaisuudessa järjestelmään voisi liittää dynaamisen tehtävätyypin. Dynaaminen tehtävä on sellainen, 
 jolle luodaan arvot vasta käynnistyshetkellä.
 
 
