*** empty log message ***

--- a/Documents/yhteenvetodokumentti/sisalto.tex
+++ b/Documents/yhteenvetodokumentti/sisalto.tex
@@ -111,6 +111,13 @@ selkeää lopetuspäivää, koska viilausta voisi jatkaa loputtomiin. Kaikki korkeimm
 vaatimukset saatiin kuitenkin toteutettua aikataulun mukaisesti. Toteutusta jatkettiin vielä
 limittäin testauksen kanssa ja lopulta saatiin lähes kaikki vaatimukset toteutettua. 
 
+Järjestelmän asentamisessa lopulliseen ympäristöönsä koettiin pieniä ongelmia siinä, että järjestelmän
+kehitys- ja tuotantoympäristö eivät olleet samanlaiset. Kehitysympäristössä oli Javan versio 1.5, kun
+taas tuotantoympäristössä on käytössä Java 1.4.2. Tätä olisi ollut syytä selvittää etukäteen, mutta toisaalta
+asiakaskaan ei tiennyt kuin vasta ihan lopussa minne lopullinen järjestelmä asennettaisiin. Näin lopuksi
+oli pakko muuttaa ohjelmakoodi vielä Java 1.4.2 yhteensopivaksi.
+
+
 \subsubsection{Testaus}
 Toisessa iteraatiossa oli varattu testauksellekin kunnolla aikaa ja se päästiin aloittamaan aikataulun mukaisesti.
 Kaikki ryhmän jäsenet osallistuivat aktiivisesti testaukseen ja testauksen yhteydessä käytetty bugilista osoittautui
@@ -158,7 +165,7 @@ geneerisyyttä, vaan toteutetut ominaisuudet ovat TitoTrainer-kohtaisia.
 
 \subsection{Ryhmän henki}
 Ryhmän henki ja ilmapiiri oli erinomainen. Ryhmäläiset tukivat toisiaan, ja apua sai aina kun sitä
-tarvitsi. Kemia ryhmän jäsenten välillä toimi moitteettomasti - kaikki tuli toimeen kaikkien kanssa.
+tarvitsi. Kemia ryhmän jäsenten välillä toimi moitteettomasti - kaikki tulivat toimeen kaikkien kanssa.
 
 \subsection{Käytetyt työkalut}
 
