*** empty log message ***

--- a/Documents/yhteenvetodokumentti/sisalto.tex
+++ b/Documents/yhteenvetodokumentti/sisalto.tex
@@ -183,9 +183,9 @@ kanssa oli suuria ongelmia.
 
 \subsection{Ohjaaja}
 Ohjaajamme Sanna Keskioja oli erittäin pätevä ja asiansa hallitseva. Sannalta saimme rakentavaa tukea
-kokouksissa ja hän hoiti saumattomasti tarvitsemiemme tilojen ja resurssien hankkimisen.
+kokouksissa ja hän hoiti hyvin tarvitsemiemme tilojen ja resurssien hankkimisen.
 
-Sannalla oli hyvä asenne hommaan, ja olisi ollut vaikeaa kuvitella Sannaa parempaa ohjaajaa tälle projektille.
+Sannalla oli hyvä asenne projektiin, ja olisi ollut vaikeaa kuvitella Sannaa parempaa ohjaajaa tälle projektille.
 
 \subsection{Asiakkaat}
 Asiakkaallamme Teemu Kerolalla oli selkeä näkemys tarvittavasta tuotteesta, ja Teemu osasi selkeästi
@@ -218,7 +218,7 @@ Ensiarvoisen tärkeää oli että projektissa oli mukana henkilö (Taro), joka tunsi 
 Eclipsen ja JSP:n. Näin muut ryhmäläiset saivat tehokkaan pikaperehdytyksen ennestään tuntemattomiin tekniikoihin.
 
 Projektiryhmämme oli ilmeisesti koottu sillä perusteella, että kaikki olivat suorittaneet Käyttöliittymät-kurssin.
-Käyttöliittymä olikin priorisoitu tärkeimmäksi yksittäiseksi osaksi järjestelmää. Kurssin suorittamisella ei kuitenkaan
+Käyttöliittymä olikin priorisoitu tärkeimmäksi yksittäiseksi osaksi järjestelmää. Käyttöliittymät-kurssin suorittamisella ei kuitenkaan
 ollut ratkaisevaa merkitystä projektin onnistumiselle, vaikkakin sen suorittamisesta oli selkeästi hyötyä projektissa.
 
 
