*** empty log message ***

--- a/Documents/yhteenvetodokumentti/sisalto.tex
+++ b/Documents/yhteenvetodokumentti/sisalto.tex
@@ -125,8 +125,10 @@ hyödylliseksi työvälineeksi.
 
 Testauksen kokonaiskattavuus saatiin lopulta aika korkeaksi, ehkä noin 85%:iin.
 
-//Tähän kuva kaikkien tunneista//
-
+\begin{figure}[h]
+  \includegraphics[width=14cm] {tunnit.eps}
+  \caption{Projektin kirjatut työtunnit}
+\end{figure}
 
 \section{Suhteet muihin osajärjestelmiin}
 
@@ -220,17 +222,3 @@ Eclipsen ja JSP:n. Näin muut ryhmäläiset saivat tehokkaan pikaperehdytyksen enne
 Projektiryhmämme oli ilmeisesti koottu sillä perusteella, että kaikki olivat suorittaneet Käyttöliittymät-kurssin.
 Käyttöliittymä olikin priorisoitu tärkeimmäksi yksittäiseksi osaksi järjestelmää. Käyttöliittymät-kurssin suorittamisella ei kuitenkaan
 ollut ratkaisevaa merkitystä projektin onnistumiselle, vaikkakin sen suorittamisesta oli selkeästi hyötyä projektissa.
-
-
-
-\section{Mielin määrin kahvia tupakkaa}
-
-Mikko joi monta batteryä 
-
-
-Taro "Ass" Morimoto kertoi naisseikkailuistaan
-
-
-Jari antoi selonteon Ninjan uusimmista käänteistä
-
-
