*** empty log message ***

--- a/Documents/yhteenvetodokumentti/sisalto.tex
+++ b/Documents/yhteenvetodokumentti/sisalto.tex
@@ -172,7 +172,7 @@ tarvitsi. Kemia ryhmän jäsenten välillä toimi moitteettomasti - kaikki tulivat t
 \subsection{Käytetyt työkalut}
 
 Projektin alussa käytettiin ryhmälle pystytettyä Wikiä, jonka käytöstä kuitenkin luovuttiin aika pian.
-Wikiä ei tarvittu, koska ryhmä tosiaan teki lähes 90% tuotoksesta yhdessä laitoksen luokissa.
+Wikiä ei tarvittu, koska ryhmä tosiaan teki lähes 90\% tuotoksesta yhdessä laitoksen luokissa.
 
 Ohjelmointiympäristönä käytettiin Eclipseä ja sen kautta käytettiin CVS-versionhallintaa. Eclipsen käyttö sujui kohtuullisen
 hyvin ryhmäläisiltä pienen totuttelun jälkeen.
